@startuml Overture Place

hide empty members

title Overture Place

note as N
Missing:
* Links with other locations/pins.
* Links with buildings.
* Translation to the chosen exchange format.

**Place** clashes with an OSM place: [[https://wiki.openstreetmap.org/wiki/Key:place]], used for (non-) administrative areas.
end note

class Place {
    id : String
    website : URL[]
    social : URL[]
    email : Email[]
}

note left of Place::ID
Data type dependent on GERS spec.
end note

enum Category {
    id : String
    description : String
}

enum OsmCategory {
    primaryFeatureTag : KeyValuePair<String,String>
    definingProperties : KeyValuePair<String,String>[]
}

Category "1" <--> "1" OsmCategory


' enum OvertureCategory

note top of Category
Provide an exhaustive list of categories to use.
end note

class Address {
    freeform : String
    postcode : String
    locality : String
    region : String<ISO-3166-2>
    country : String<ISO-3166>

    ' houseNumber : String
    ' unit : String
    ' street : String
    ' city : String
    ' neighbourhood : String
    ' region: String
    ' subRegion: String
    ' country : String
    ' postalCode: String
}

note bottom of Address
Following the [[https://microsoft.sharepoint.com/:w:/r/teams/Overture/Shared%20Documents/Places%20Workstream/Meta%20-%20Address%20Schema%20for%20Overture.docx?d=wfa5c2efb03c14c12b5997e435a619681&csf=1&web=1&e=jqauNP simplified address proposal]].

Should we add?
- script
- language code
- geopolitical view
- relations to street, locality, postal
end note

class Point {
    lat : double
    lon : double
}

note left of Point
7 decimal digit precision
end note

class Name {
    value : String
    type : String
    languageCode : String
    script : String<ISO-15924 code>
}

class Phone {
    type : String
    number : String
}

class Brand {
    name : String
    wikidata: String
}

Place --* "1..*" Address : address
Place -up-|> Point
Place --* "0..*" Name : names
Place --* "1" Name : primaryName
Place --* "0..*" Phone : phones
Place --> "0..1" Brand : brand
Place -> Place : belongsTo
Place -> Place : supersedes
Place -left-> "1..*" Category : categories

Category --> "0..1" Category : parent
' OvertureCategory -[hidden]- Category

@enduml
